# eml-symbolic-regression

./: .gitignore  LICENSE  README.md  pyproject.toml
eml/: __init__.py  engine.py
examples/: benchmark.py  benchmark_multivariable.py  cli_examples.sh  from_data_points.py  quickstart.py
hermes/: hermes_tool.py  llamacpp_example.sh  mcp_server.py  system_prompt_snippet.md  tool_schema.json
hermes/skill/: SKILL.md
tests/: test_engine.py
